Add some GUI